--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,5 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">MADPractical3_20012021007</string>
     <string name="registration">Registration</string>
     <string name="login">Login</string>
 </resources>
